# kicad-yaml

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: examples.md  getting-started.md  schema.md
examples/neopixel_grid/: README.md  design.yaml
kicad_yaml/: __init__.py  cli.py  expressions.py  kicad_net_patch.py  kicad_property_patch.py  kicad_refresh.py  layout.py  libraries.py  loader.py  pcb.py  project_file.py  schema.py  schematic.py  sync.py  topology.py
tests/: test_api.py  test_cli.py  test_example.py  test_expressions.py  test_integration.py  test_integration_hierarchical.py  test_kicad_net_patch.py  test_layout.py  test_layout_sch.py  test_layout_topology.py  test_libraries.py  test_loader_hierarchical.py  test_loader_schema.py  test_loader_semantic.py  test_pcb_footprints.py  test_pcb_hierarchical.py  test_pcb_outline.py  test_schema.py  test_schematic_flat.py  test_schematic_hierarchical.py  test_sync.py
tests/fixtures/: integration_flat.yaml  integration_hierarchical.yaml  minimal_flat.yaml
tests/fixtures/fake_kicad_share/footprints/Fake.pretty/: FakeSMD.kicad_mod
tests/fixtures/fake_kicad_share/symbols/: Fake.kicad_sym
